<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Поступалка</string>
    <string name="action_settings">Настройки</string>
    <string name="select_institution">Выберите ВУЗ</string>
    <string name="spbu">СПбГУ</string>
    <string name="spb_gmu">СПб ГМУ</string>
    <string name="itmo">ИТМО</string>
    <string name="network_error">Ошибка сети</string>
    <string name="wait_please">Пожалуйста, подождите…</string>
    <string name="retrieving_data">Загрузка данных…</string>
    <string name="select_from_list">Выберите из списка</string>
    <string name="name">Имя</string>
    <string name="number">Номер в списке</string>
    <string name="originals">Оригиналов документов</string>
    <string name="docs_date">Дата подачи</string>
    <string name="points_got">Баллы</string>
    <string name="copies">Копий документов</string>
    <string name="reclaimed">Забравших документы</string>
    <string name="above_me">Выше меня по списку:</string>
    <string name="statistics">Статистика:</string>
    <string name="all_given">Всего подано документов</string>
    <string name="today_reclaimed">Забрали сегодня</string>
    <string name="needed_points">Баллов для первой волны</string>
    <string name="added_to_favs">Добавлено в избранное</string>
    <string name="database_error">Ошибка базы данных</string>
    <string name="select_name">Выберите имя</string>
    <string name="no_data_available">Никто не подал заявлений</string>
    <string name="removed_from_favs">Удалено из избранного</string>
    <string name="select_from_favs">Из избранного</string>
    <string name="last_updated">Последняя версия</string>
    <string name="refresh">Обновить</string>
    <string name="no_updates_available">Нет обновлений таблицы</string>
    <string name="wrong_data">Неверный формат данных</string>
    <string name="wrong_page_format">Неверный формат страницы</string>
    <string name="all_reclaimed">Всего забрали документов</string>
    <string name="cannot_update_statistics">Не удалось обновить статистику</string>
    <string name="notify_updates">Уведомлять об обновлениях</string>
    <string name="notify_updates_sum">Уведомлять об обновлениях избранных страниц и вести статистику обновлений</string>
    <string name="updates_present">Есть обновления страниц</string>
    <string name="but_excuse">Увы!</string>
    <string name="only_pro">Эта функция доступна только в про-версии или даётся на день после просмотра рекламы</string>
    <string name="click_ad">Покликать рекламу…</string>
    <string name="buy_pro">Купить про-версию</string>
    <string name="name_not_found">Имя не найдено в таблице!</string>
    <string name="invalid_url">Неверная ссылка</string>
    <string name="priority">Приоритет</string>
    <string name="better_than_me">Лучше меня:</string>
    <string name="select_statistics">Выберите режим статистики</string>
    <string name="originals_above">Оригиналов выше</string>
    <string name="copies_above">Копий документов</string>
    <string name="reclaimed_above">Забравших документы выше</string>
    <string name="total_submitted">Всего подано</string>
    <string name="reclaimed_today">Забрано документов сегодня</string>
    <string name="statistics_by_day">Статистика по дням</string>
    <string name="favorite_not_found">Не найдено в избранном!</string>
    <string name="cannot_load_statistics">Не удалось загрузить статистику!</string>
    <string name="statistics_not_collected">Статистика ещё не собрана! Отследите хотя бы несколько часов!</string>
    <string name="autoupdate_interval">Интервал обновления</string>
    <string name="autoupdate_interval_sum">Как часто выполнять обновление информации (чем меньше, тем подробнее статистика)</string>
    <string name="open_in_browser">Открыть в браузере</string>
    <string name="about">О программе</string>
    <string name="about_summary">Программа предназначена для облегчения отслеживания хода поступления студентами различных ВУЗов. Автор идеи и разработчик - Адонай.\n\n
        Это свободная программа: вы можете перераспространять ее и/или изменять ее на условиях
        Стандартной общественной лицензии GNU в том виде, в каком она была опубликована Фондом свободного программного
        обеспечения; либо версии 3 лицензии, либо (по вашему выбору) любой более поздней версии. \n Эта программа
        распространяется в надежде, что она будет полезной, но БЕЗО ВСЯКИХ ГАРАНТИЙ; даже без неявной гарантии ТОВАРНОГО
        ВИДА или ПРИГОДНОСТИ ДЛЯ ОПРЕДЕЛЕННЫХ ЦЕЛЕЙ. Подробнее см. в Стандартной общественной лицензии GNU. \n Вы должны
        были получить копию Стандартной общественной лицензии GNU вместе с этой программой. Если это не так, см.
        http://www.gnu.org/licenses/</string>
    <string name="total">Всего</string>
    <string name="without_exams">Без испытаний / вне конкурса</string>
    <string name="contest">На конкурсной основе</string>
    <string name="select_budget_count">Выберите количество бюджетных мест</string>
    <string name="favs_invalidated">Формат списков изменён ВУЗом, пожалуйста, пересоздайте закладки! Приносим извинения за доставленные неудобства.</string>
</resources>
