<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFlow$PlaceholderFragment">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:prompt="@string/select_institution"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/name_spinner"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_margin="10dp">


        <view class="com.adonai.admissiontracker.views.DoubleTextView"
            android:id="@+id/name"
            app:header_text="@string/name"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3">

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/list_number"
                app:header_text="@string/number"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/date"
                app:header_text="@string/docs_date"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/points"
                app:header_text="@string/points_got"
                android:layout_margin="5dp" />
        </LinearLayout>

        <TextView
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/above_me"
            android:id="@+id/above_label"
            android:gravity="center"
            android:background="@color/header_color"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3">

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/originals"
                app:header_text="@string/originals"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/copies"
                app:header_text="@string/copies"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/reclaimed_above"
                app:header_text="@string/reclaimed"
                android:layout_margin="5dp" />
        </LinearLayout>

        <TextView
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statistics"
            android:id="@+id/statistics_label"
            android:gravity="center"
            android:background="@color/header_color"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3">

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/all_given"
                app:header_text="@string/all_given"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/today_reclaimed"
                app:header_text="@string/today_reclaimed"
                android:layout_margin="5dp" />

            <view class="com.adonai.admissiontracker.views.DoubleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/needed_points"
                app:header_text="@string/needed_points"
                android:layout_margin="5dp" />
        </LinearLayout>
    </GridLayout>

</RelativeLayout>
